various fixes of the test; ignore binary files in grep